--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=FPolyShare;encrypt=false
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.jpa.show-sql=true
+spring.jpa.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
 
