--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.username=sa
 spring.datasource.password=123
 spring.jpa.show-sql=true
 spring.jpa.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
