--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,8 +1,14 @@
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=FPolyShare;encrypt=false
-spring.datasource.username=sa
-spring.datasource.password=123
-spring.jpa.show-sql=true
-spring.jpa.hibernate.format_sql=true
+#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=FPolyShare;encrypt=false
+#spring.datasource.username=sa
+#spring.datasource.password=123
+
+spring.datasource.url=jdbc:mysql://localhost:3306/ftube
+spring.datasource.username=root
+spring.datasource.password=12345678
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=false
+
 spring.jpa.hibernate.ddl-auto=create
 
