--- a/Admin/package.json
+++ b/Admin/package.json
@@ -10,6 +10,8 @@
     "@mui/x-data-grid": "^6.16.3",
     "@mui/x-data-grid-generator": "^6.17.0",
     "@mui/x-data-grid-premium": "^6.17.0",
+    "@mui/x-date-pickers": "^6.18.1",
+    "@nivo/bar": "^0.83.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
