--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.password=123
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.main.allow-bean-definition-overriding=true
 #spring.datasource.url=jdbc:mysql://localhost:3306/ftube
 #spring.datasource.username=root
 #spring.datasource.password=12345678
